# weather

./: .env.example  .gitignore  Cargo.toml  Cross.toml  LICENSE-MIT  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: checks.yml  release-weather-api.yml  release-weathergrid.yml
api/: Cargo.toml  README.md
api/src/: api.rs  auth.rs  cache.rs  config.rs  downloader.rs  errors.rs  forecast.rs  lib.rs  main.rs  scheduler.rs
api/src/downloader/: ecmwf.rs  icon_eu.rs  noaa.rs  storage.rs
api/src/forecast/: compression.rs  deserializer.rs  weather.rs
weathergrid/: Cargo.toml  README.md
weathergrid/src/: atmosphere.rs  codec.rs  grid.rs  interpolation.rs  lib.rs  provider.rs  slice.rs  winds.rs
weathergrid/src/snapshots/: weathergrid__winds__tests__direction_test@E -> 90°.snap  weathergrid__winds__tests__direction_test@N -> 0°.snap  weathergrid__winds__tests__direction_test@NE -> 45°.snap  weathergrid__winds__tests__direction_test@NW -> 315°.snap  weathergrid__winds__tests__direction_test@S -> 180°.snap  weathergrid__winds__tests__direction_test@SE -> 135°.snap  weathergrid__winds__tests__direction_test@SW -> 225°.snap  weathergrid__winds__tests__direction_test@W -> 270°.snap  weathergrid__winds__tests__speed_test@-30-15.snap  weathergrid__winds__tests__speed_test@-30-30.snap  weathergrid__winds__tests__speed_test@-5--5.snap  weathergrid__winds__tests__speed_test@1-1.snap  weathergrid__winds__tests__speed_test@10-10.snap  weathergrid__winds__tests__speed_test@20--20.snap
