[workspace]
resolver = "3"
members = ["api", "weathergrid"]

[workspace.package]
# Each crate carries its own `version` (see api/ and weathergrid/ Cargo.toml):
# `weathergrid` (crates.io) and `weather-api` (binary) release independently, so
# their versions are intentionally not shared here.
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/abogaichuk/weather"

[workspace.dependencies]
# internal crates
weathergrid = { path = "weathergrid" }

# async runtime + HTTP client
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls", "zstd"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# time
chrono = { version = "0.4.40", features = ["serde"] }

# ordered f64 map keys (used in the wire-grid representation)
ordered-float = "5.3.0"

# errors
thiserror = "2"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
